Require positive radii, ignore other.

BUG: 298502